--- a/public/css/wpadcenter-public.css
+++ b/public/css/wpadcenter-public.css
@@ -9,6 +9,23 @@
 	flex-wrap:wrap;
 	align-items:center;	
 }
+.wpadcenter-activebutton{
+	border:1px solid ;
+	border-radius:3px;
+	padding: 18px 9px;
+}
+.wpadcenter-align-container .dashicon{
+	padding-left:3px;
+}
+.wpadcenter-async-select input[type="text"]:focus{
+	box-shadow: none;
+}
+.Wpadcenter-gutenberg-container .components-placeholder{
+	background-color:#F3F6FF;
+}
+.Wpadcenter-gutenberg-container{
+	z-index:20;
+  }
 .wpadcenter-ad-spacing{
 	padding:5px;
 }
@@ -21,7 +38,54 @@
 .wpadcenter-single-ad-default{
 	display:flex;
 	align-items:center;
+	overflow:hidden;
+	margin:5px;
 }
 .wpadcenter-single-ad-default div{
 	margin:0 auto;
+}
+.wpadcenter-300x250{
+	max-width:300px;
+	max-height:250px;
+	height:250px;
+}
+.wpadcenter-468x60{
+	max-width:468px;
+	max-height:60px;
+	height:60px;
+}
+.wpadcenter-120x600{
+	max-width:120px;
+	max-height:600px;
+	height:600px;
+}
+.wpadcenter-160x600{
+	max-width:160px;
+	max-height:600px;
+	height:600px;
+}
+.wpadcenter-728x90{
+	max-width:728px;
+	max-height:90px;
+	height:90px;
+}
+.wpadcenter-180x150{
+	max-width:180px;
+	max-height:150px;
+	height:150px;
+}
+.wpadcenter-120x90{
+	max-width:120px;
+	max-height:90px;
+	height:90px;
+}
+.wpadcenter-120x60{
+	max-width:120px;
+	max-height:60px;
+	height:60px;
+}
+.wpadcenter-125x125{
+	max-width:125px;
+	max-height:125px;
+	height:125px;
 }
